# curso-fastapi-dunossauro

./: LICENSE  README.md  pyproject.toml
src/fastapi_zero_dunossauro/: app.py  schemas.py
tests/: conftest.py  test_app.py
